# aith_dl_nlp

./: README.md  hw_1.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb  hw_4_data_labeling_deeppavlov.ipynb  hw_5.ipynb  pyproject.toml
pictures/: 2d  sample_1  sample_2  sample_3  topic_word_scores
